--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 <meta charset="UTF-8">
 </head>
+  <style>
+body{font-family:sans-serif}
+  </style>
 <body>
 <p>Задание 05.11.2024</p>
 <p>Выполнил студент группы 1-ОИС-24</p>
